Alignment fixed
testing alignment

Fixed alignment

testing alignment 2

Testing 3

Testing 4

Testing 5

Testing 6

Testing 7

Testing 8

Testing 9

Testing 10

Testing 11

Testing 12

Testing 13

Testing 14

--- a/public/css/css2.css
+++ b/public/css/css2.css
@@ -112,7 +112,8 @@ body{
 	color:#0a6771;
 	text-transform: uppercase;
 	transition: all 0.3s ;
-	font-weight: 600;
+  font-weight: 600;
+  margin-top:1rem;
 
 }
 
@@ -121,7 +122,18 @@ body{
 		transform: scale(1.2);
 
 
-	}
+  }
+  
+  @media(max-width:600px){
+
+    .sidebar h1{
+        margin-top:1.5rem;
+
+      
+  }
+
+
+}
 
    .sidebar a{
    	display: block;
@@ -166,15 +178,15 @@ body{
     height: 40vh;
   }
 
-  .content-h1{
+  .content-heading{
     margin:2rem;
     text-transform: uppercase;
-    font-size: 50px;
-    color:#28b4a6b6;
+    font-size: 30px;
+    color:#0a6771;
     transition: all 0.3s;
   }
 
-  .content-h1:hover{
+  .content-heading:hover{
     transform: scale(1.05);
   }
 
@@ -191,17 +203,16 @@ body{
     background-position: center;
   }
 
-  .content-heading{
-    font-weight: 600;
-    font-size:38px;
-    margin:1rem;
-    margin-right:-2rem;
-    color:#0a6771;
-    transition: all 0.3s;
+  
+
+  @media(max-width:600px){
+    .content-heading{
+      font-size:25px;
+    }
   }
 
     .content-heading:hover{
-      transform: scale(1.12) ;
+      transform: scale(1.05) ;
     }
 
     .content-p{
@@ -357,7 +368,7 @@ body{
         align-items: center;
         text-align: center;
         flex-basis:30vh;
-	  padding-bottom:5px;
+        margin-bottom: 1.5rem;
 
     }
 
@@ -367,6 +378,8 @@ body{
         align-items: center;
         min-height: 5rem;
     }
+
+    
 
     .products,.services{
         display: flex;
