--- a/public/css/index.css
+++ b/public/css/index.css
@@ -25,20 +25,6 @@ body{
 
 }
 
-/* .jumbotron{
-    /* background-image: linear-gradient(to right bottom, #76d56fc7,#28b4a6b6),url("../images/jumbo.jpg"); */
-    background-repeat: no-repeat;
-    background-size:cover;
-    background-position: center;
-    height:90vh;
-    padding-top:0;
-    display:flex;
-    flex-direction: column;
-
-
-
-} */
-
 .jumbo-2{
     display:flex;
     justify-content: center;
@@ -51,14 +37,14 @@ body{
     display: block;
     text-align: center;
     letter-spacing: 20px;
-    color:#333;
+    color:#fff;
     text-transform: uppercase;
     font-size: 6rem;
 
 }
 .heading-secondary{
     display: block;
-    color:#333;
+    color:#fff;
 }
 
 .jumbotron{
@@ -67,9 +53,11 @@ body{
     background-size:cover;
     background-position: center;
     height:90vh;
-    padding-top:0;
+    margin-bottom: 1rem;
     display:flex;
     flex-direction: column;
+    
+
 
 
 
@@ -94,7 +82,6 @@ body{
     align-items: center;
 
 } */
-
 @keyframes moveRight{
 	0%{
 
@@ -320,7 +307,7 @@ body{
 
 
 .navbar-light .navbar-nav .nav-link {
-    color:#555;
+    color:#fff;
     font-size:1.4rem;
     padding:0.7rem;
     font-weight: 500;
@@ -329,24 +316,24 @@ body{
 
 
 .navbar-light .navbar-nav .nav-link:hover{
-    color:#115683;
+    color:#0099cc;
     background-color: #fff;
     border-radius: 8px;
 }
 .navbar-light .navbar-nav .active>.nav-link{
-    color:#555;
+    color:#fff;
     font-size:1.4rem;
     transition: all 0.3s ease-out;
 
 }
 
 .navbar-light .navbar-nav .active>.nav-link:hover{
-    color:#115683;
+    color:#0099cc;
     border-radius: 8px;
 }
 
 .navbar-light .navbar-brand .navbar-index{
-    color:#555;
+    color:#fff;
     font-size:1.4rem;
     font-weight: 500;
     /* padding-left:1rem; */
@@ -393,8 +380,16 @@ body{
         align-items: center;
         text-align: center;
         flex-basis:30vh;
+        margin-top:2rem;
+
 
     }
+
+    .sidebar h1{
+      margin-top:2.5rem;
+    }
+
+
 
     .content{
         display:flex;
@@ -406,7 +401,9 @@ body{
     .products,.services{
         display: flex;
         flex-direction: column;
-        align-items: center;}
+        align-items: center;
+        margin-top: 2rem;
+      }
 
 
     .products .card-items,.services .card-items{
@@ -425,7 +422,7 @@ body{
 
     .products h1,.services h1{
         align-items: center;
-        margin: 2rem;
+        margin-top: 2rem;
     }
 
 
